Bug 125325 - Crash when changing assignments between Table indexes and Free indexes for DBase
Summary: Crash when changing assignments between Table indexes and Free indexes for DBase
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:6.3.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2019-05-16 20:01 UTC by Julien Nabet
Modified: 2019-05-17 07:25 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (3.02 KB, text/plain)
2019-05-16 20:03 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-05-16 20:01:15 UTC
Description:
On pc Debian x86-64 with master sources updated today, I got a crash when changing assignments between Table indexes and Free indexes for DBase

Steps to Reproduce:
1. Retrieve dbf and associated ndx file
(see zip proposed here https://www.clicketyclick.dk/databases/xbase/index.shtml.en)
2. Create a brand new odb file pointing to this dBase base
3. Edit/Database/Properties
4. Click Additional Settings
5. Click Indexes
=> a dialog box appears with 2 panes:
- left pane: Table indexes
- right pane: Free indexes
6. Click first left arrow to try to transfer an ndx index at left

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Julien Nabet 2019-05-16 20:03:27 UTC
Created attachment 151468 [details]
bt with debug symbols
Comment 2 Commit Notification 2019-05-17 07:22:17 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/3c0003c9f0ff5bdc49da046a604a3d2c8cc5d5df%5E%21

tdf#125325: fix crash about index managements for dBase

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.