tdf#125325: fix crash about index managements for dBase

See bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=151468

Pb is aSearch becomes invalid after _rList.erase(aSearch); line 101
so just test aReturn.GetIndexFileName() isn't empty

Change-Id: Iae5b3a7f76fe565f890bd23bfb2ce5d9c6134986
Reviewed-on: https://gerrit.libreoffice.org/72427
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>