dbaccess/source/ui/dlg/dbfindex.cxx
@@ -107,8 +107,7 @@ OTableIndex ODbaseIndexDialog::implRemoveIndex(const OUString& _rName, TableInde
         else
             _rDisplay.select(static_cast<sal_uInt16>(nPos));
     }
-
-    OSL_ENSURE(!_bMustExist || (aSearch != _rList.end()), "ODbaseIndexDialog::implRemoveIndex : did not find the index!");
+    OSL_ENSURE(!_bMustExist || !aReturn.GetIndexFileName().isEmpty(), "ODbaseIndexDialog::implRemoveIndex : did not find the index!");
     return aReturn;
 }
 
